# chat-cleaner

./: .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  log_config.ini  pyproject.toml
tg-cleaner/: app.py  settings.py
tg_cleaner/: app.py  settings.py
